Project Ohtli {
  database_type: 'NoSQL - Firestore'
  Note: 'Modelo de Datos Completo de Ohtli'
}

Table users {
  id varchar [pk, note: "UID de Autenticación"]
  photoURL varchar [note: "URL de la foto de perfil"]
  phone varchar
  privacy_share boolean
  privacy_notifications boolean
  privacy_public boolean
  addresses array [note: "Array de objetos Address"]
  updatedAt timestamp
  
  Note: 'Ruta: /users/{userId}'
}

Table addresses {
  id varchar [pk, note: "ID determinístico o generado"]
  userId varchar [ref: > users.id]
  customName varchar
  category varchar
  street varchar
  suburb varchar
  zip varchar
  city varchar
  state varchar
  country varchar
  lat float
  lng float
  isDeleted boolean [note: "Para sincronización offline"]
  deletedAt int [note: "Timestamp ms"]
  updatedAt int [note: "Timestamp ms"]
  
  Note: 'Virtual table: elementos del array addresses en users'
}

Table trips {
  id varchar [pk, note: "ID Automático del Documento"]
  userId varchar [ref: > users.id, note: "Ruta: /users/{userId}/trips/{tripId}"]
  title varchar [note: "Máximo 100 caracteres"]
  description varchar [note: "Máximo 200 caracteres"]
  coverUrl varchar [note: "URL de Firebase Storage"]
  status varchar [note: "Enum: 'draft', 'published'"]
  visibility varchar [note: "Enum: 'public', 'private'"]
  createdAt timestamp
  updatedAt timestamp
}

Table trip_contents {
  id varchar [pk, note: "ID estático: 'content'"]
  tripId varchar [ref: - trips.id, note: "Ruta: /users/{userId}/trips/{tripId}/details/content"]
}

Table trip_sections {
  id varchar [pk, note: "UUID v4"]
  tripContentId varchar [ref: > trip_contents.id]
  type varchar [note: "Enum: 'place', 'text', 'text_image'"]
  title varchar [note: "Sólo en 'place'"]
  description varchar [note: "Sólo en 'place'"]
  rating int [note: "Sólo en 'place' (1-5)"]
  mainPhotoUrl varchar [note: "Sólo en 'place'"]
  secondaryPhotoUrls array [note: "Sólo en 'place' (Max 2)"]
  markdownText text [note: "En 'text' y 'text_image'"]
  imageUrl varchar [note: "Sólo en 'text_image'"]
  layout varchar [note: "Enum: 'left', 'right'. Sólo en 'text_image'"]
  
  Note: 'Representa el array polimórfico de secciones dentro del documento trip_contents'
}
